# jmap-matrix-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  bacon.toml  default.nix  flake.nix  justfile  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-artifacts.yml  release-plz.yml  update-flake-lock.yml
docs/adr/: 0001-custom-jmap-matrix-bridge.md  0002-double-puppet-via-login-token.md  0003-tokio-async-locks-over-dashmap.md  0004-thread-via-rfc5322-message-ids.md  0005-backfill-oldest-first.md  0006-single-instance-db-coordination.md  0007-verified-send-with-retry-queue.md  0008-ci-and-release-flow.md  0009-one-jmap-account-per-matrix-user.md  0010-permission-model.md  0011-command-emoji-duality.md  0012-matrix-actions-replicate-as-reversible-moves.md  0013-end-to-bridge-encryption-deferred.md  0014-automatic-double-puppet-via-shared-secret.md  0015-read-state-jmap-to-matrix-requires-double-puppet.md  README.md
examples/: render_email.rs  render_gallery.rs
migrations/: 20260516000000_initial.sql  20260616000000_per_thread_rooms.sql  20260620000000_bridge_state.sql  20260625000000_send_delay.sql
nix/check/: default.nix
nix/module/: README.md  default.nix
nix/playground/: README.md  default.nix  register-user.py
src/: client_manager.rs  commands.rs  config.rs  crypto.rs  events.rs  ghost.rs  ingest.rs  lib.rs  main.rs  matrix.rs  net.rs  permissions.rs  puppet.rs  retry.rs  routes.rs  sender.rs  state.rs  store.rs
src/commands/: compose.rs  email.rs  help.rs  login.rs  login_matrix.rs  logout.rs  reply.rs  send_delay.rs  signature.rs  status.rs  sync.rs
src/services/: content.rs  images.rs  mod.rs  send_state.rs  transactions.rs
src/store/: bridge.rs  connection.rs  mod.rs  queue.rs  sync.rs  threads.rs  users.rs
src/sync/: backfill.rs  email.rs  mailbox.rs  mod.rs
tests/: auth_test.rs  auto_double_puppet_test.rs  backfill_test.rs  bridge_test.rs  command_router_test.rs  compose_test.rs  event_source_test.rs  events_test.rs  jmap_mock_test.rs  matrix_test.rs  multi_user_test.rs  read_state_test.rs  send_delay_test.rs  send_state_test.rs  sender_test.rs  signature_test.rs  space_test.rs  status_logout_test.rs  sync_repair_test.rs  sync_test.rs  trash_junk_test.rs  version_check.nix
