[package]
name = "jmap-matrix-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.4", features = ["util"] }

# JMAP Client
jmap-client = "0.4"
base64 = "0.22"

# Matrix Types
ruma = { version = "0.14", features = ["client-api", "appservice-api", "events", "rand", "canonical-json"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }

# CLI Args
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["full", "test-util"] }
serde_json = "1.0"
