[package]
name = "jmap-matrix-bridge"
version = "0.3.2"
description = "A bridge between JMAP email and Matrix messaging"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/palebluebytes/jmap-matrix-bridge"
keywords = ["jmap", "matrix", "bridge", "email"]
categories = ["email", "web-programming"]
edition = "2024"
rust-version = "1.85.0"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }

# Best Practices & Security hardening
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
use_self = "warn"
str_to_string = "warn"

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.7", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }

jmap-client = "0.4"
base64 = "0.22"
# Constant-time hs_token comparison (auth middleware).
subtle = "2"
# Percent-encode untrusted values into the JMAP download URL template.
percent-encoding = "2"
futures-util = "0.3"
bytes = "1.8"
rand = "0.10"
# Shared-secret-auth double-puppet: HMAC-SHA512 of the mxid is the login password
# (sha2 is already a dependency below).
#
# Pinned to the 0.10-era digest stack (hmac 0.12 / sha2 0.10): matrix-sdk 0.16
# requires `sha2 ^0.10.9`, so 0.10 stays in the tree regardless. Bumping our
# direct use to hmac 0.13 / sha2 0.11 would only ADD a second copy (sha2 0.10 +
# 0.11, digest 0.10 + 0.11) for no real gain. Revisit when a matrix-sdk upgrade
# brings sha2 0.11, so the whole tree bumps together. (Dependabot #45/#46 held.)
hmac = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
serde_yaml = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"
thiserror = "2.0"

html2text = "0.17"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }

aes-gcm = "0.11"
sha2 = "0.10"

clap = { version = "4.6", features = ["derive", "env"] }

uuid = { version = "1", features = ["v4"] }
scopeguard = "1.2"

matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls"] }
ammonia = "4"
# Only used to format a Unix epoch as a UTC string (reply-quote attribution),
# so drop the bundled tz database — TimeZone::UTC needs no tzdb.
jiff = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.52", features = ["full", "test-util"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Optimize dependencies even in development mode for lightning-fast runtime and test execution
[profile.dev.package."*"]
opt-level = 3
